--- a/train.ipynb
+++ b/train.ipynb
@@ -49,14 +49,16 @@
     "    base_path=train_dataset_path,\n",
     "    total_classes=tf.convert_to_tensor(num_classes,dtype=tf.int32),\n",
     "    image_size=tf.convert_to_tensor(image_size,dtype=tf.float32),\n",
-    "    anchors=tf.convert_to_tensor(anchors_list,dtype=tf.float32)\n",
+    "    anchors=tf.convert_to_tensor(anchors_list,dtype=tf.float32),\n",
+    "    batch_size=32\n",
     ")\n",
     "\n",
     "valid_dataset = generate_dataset(\n",
     "    base_path=valid_dataset_path,\n",
     "    total_classes=tf.convert_to_tensor(num_classes,dtype=tf.int32),\n",
     "    image_size=tf.convert_to_tensor(image_size,tf.float32),\n",
-    "    anchors=tf.convert_to_tensor(anchors_list,dtype=tf.float32)\n",
+    "    anchors=tf.convert_to_tensor(anchors_list,dtype=tf.float32),\n",
+    "    batch_size=32\n",
     ")"
    ]
   },
