trained model successfully

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\Dell\\anaconda3\\envs\\myenv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Object_Detection import *\n",
     "import tensorflow as tf\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,87 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\Dell\\anaconda3\\envs\\myenv\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n",
-      "WARNING:tensorflow:From c:\\Users\\Dell\\anaconda3\\envs\\myenv\\lib\\site-packages\\keras\\src\\layers\\normalization\\batch_normalization.py:979: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
-      "\n",
-      "Model: \"model\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
-      "==================================================================================================\n",
-      " input_1 (InputLayer)        [(None, 224, 224, 3)]        0         []                            \n",
-      "                                                                                                  \n",
-      " P0 (YoloConvLayer)          (None, 112, 112, 64)         2048      ['input_1[0][0]']             \n",
-      "                                                                                                  \n",
-      " P1 (YoloConvLayer)          (None, 56, 56, 128)          74368     ['P0[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P2 (YoloC2FLayer)           (None, 56, 56, 128)          85120     ['P1[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P3 (YoloConvLayer)          (None, 28, 28, 256)          296192    ['P2[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P4 (YoloC2FLayer)           (None, 28, 28, 256)          534528    ['P3[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P5 (YoloConvLayer)          (None, 14, 14, 512)          1182208   ['P4[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P6 (YoloC2FLayer)           (None, 14, 14, 512)          1323520   ['P5[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P7 (YoloConvLayer)          (None, 7, 7, 768)            3542784   ['P6[0][0]']                  \n",
-      "                                                                                                  \n",
-      " P8 (YoloC2FLayer)           (None, 7, 7, 1024)           5006336   ['P7[0][0]']                  \n",
-      "                                                                                                  \n",
-      " up_sampling2d (UpSampling2  (None, 28, 28, 1024)         0         ['P8[0][0]']                  \n",
-      " D)                                                                                               \n",
-      "                                                                                                  \n",
-      " P9 (YoloSPPFLayer)          (None, 7, 7, 1024)           2307891   ['up_sampling2d[0][0]']       \n",
-      "                                                          2                                       \n",
-      "                                                                                                  \n",
-      " P10 (UpSampling2D)          (None, 14, 14, 1024)         0         ['P9[0][0]']                  \n",
-      "                                                                                                  \n",
-      " tf.concat (TFOpLambda)      (None, 14, 14, 1536)         0         ['P6[0][0]',                  \n",
-      "                                                                     'P10[0][0]']                 \n",
-      "                                                                                                  \n",
-      " P12 (YoloC2FLayer)          (None, 14, 14, 512)          1847808   ['tf.concat[0][0]']           \n",
-      "                                                                                                  \n",
-      " P13 (UpSampling2D)          (None, 28, 28, 512)          0         ['P12[0][0]']                 \n",
-      "                                                                                                  \n",
-      " tf.concat_1 (TFOpLambda)    (None, 28, 28, 768)          0         ['P4[0][0]',                  \n",
-      "                                                                     'P13[0][0]']                 \n",
-      "                                                                                                  \n",
-      " P15 (YoloC2FLayer)          (None, 28, 28, 256)          465152    ['tf.concat_1[0][0]']         \n",
-      "                                                                                                  \n",
-      " P16 (YoloConvLayer)         (None, 14, 14, 256)          591104    ['P15[0][0]']                 \n",
-      "                                                                                                  \n",
-      " tf.concat_2 (TFOpLambda)    (None, 14, 14, 768)          0         ['P12[0][0]',                 \n",
-      "                                                                     'P16[0][0]']                 \n",
-      "                                                                                                  \n",
-      " P18 (YoloC2FLayer)          (None, 14, 14, 512)          1454592   ['tf.concat_2[0][0]']         \n",
-      "                                                                                                  \n",
-      " P19 (YoloConvLayer)         (None, 7, 7, 512)            2361856   ['P18[0][0]']                 \n",
-      "                                                                                                  \n",
-      " tf.concat_3 (TFOpLambda)    (None, 7, 7, 1536)           0         ['P9[0][0]',                  \n",
-      "                                                                     'P19[0][0]']                 \n",
-      "                                                                                                  \n",
-      " y1 (YoloConvLayer)          (None, 28, 28, 18)           4698      ['P15[0][0]']                 \n",
-      "                                                                                                  \n",
-      " y2 (YoloConvLayer)          (None, 14, 14, 18)           9306      ['P18[0][0]']                 \n",
-      "                                                                                                  \n",
-      " y3 (YoloConvLayer)          (None, 7, 7, 18)             27738     ['tf.concat_3[0][0]']         \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 41888270 (159.79 MB)\n",
-      "Trainable params: 41845538 (159.63 MB)\n",
-      "Non-trainable params: 42732 (166.92 KB)\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creat new model\n",
     "model = get_model(num_classes=num_classes,num_anchors=len(anchors_list))\n",
@@ -169,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='adam',loss=YoloLoss(anchors_norm=tf.convert_to_tensor(anchors_list,dtype=tf.float32)/224.0))"
+    "loss = YoloLoss(anchors=tf.convert_to_tensor(anchors_list,dtype=tf.float32)/224.0)"
    ]
   },
   {
@@ -178,7 +91,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(train_dataset,validation_data=valid_dataset,epochs=2)"
+    "model.compile(optimizer='adam', loss={'y1':loss,'y2':loss,'y3':loss})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(train_dataset,validation_data=valid_dataset,epochs=100)"
    ]
   }
  ],
